--- a/index.html
+++ b/index.html
@@ -1454,6 +1454,14 @@
                 grid-template-columns: 1fr;
             }
         }
+
+        @media (max-width: 768px) {
+  .hero {
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('images/download1-ezgif.com-webp-to-jpg-converter.jpg') center/cover no-repeat;
+    background-attachment: scroll;
+  }
+}
+
     </style>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
