--- a/index.html
+++ b/index.html
@@ -1730,7 +1730,7 @@
                 <div class="gallery-item" data-category="braids">
                     <img src="images/gustavo-spindula-K2D7muBun1A-unsplash.jpg" alt="Knotless Braids" class="gallery-img">
                     <div class="gallery-overlay">
-                        <a href="/api/placeholder/800/800" class="gallery-icon">
+                        <a href="images/gustavo-spindula-K2D7muBun1A-unsplash.jpg" class="gallery-icon">
                             <i class="fas fa-search-plus"></i>
                         </a>
                     </div>
@@ -1738,7 +1738,7 @@
                 <div class="gallery-item" data-category="braids">
                     <img src="images/gustavo-spindula-M0NkWmz98o8-unsplash.jpg" alt="Spiral Braids" class="gallery-img">
                     <div class="gallery-overlay">
-                        <a href="/api/placeholder/800/800" class="gallery-icon">
+                        <a href="images/gustavo-spindula-M0NkWmz98o8-unsplash.jpg" class="gallery-icon">
                             <i class="fas fa-search-plus"></i>
                         </a>
                     </div>
@@ -1746,7 +1746,7 @@
                 <div class="gallery-item" data-category="locs">
                     <img src="images/kelly-sikkema-kT2VGgFXrAU-unsplash.jpg" alt="Soft Locs" class="gallery-img">
                     <div class="gallery-overlay">
-                        <a href="/api/placeholder/800/800" class="gallery-icon">
+                        <a href="images/kelly-sikkema-kT2VGgFXrAU-unsplash.jpg" class="gallery-icon">
                             <i class="fas fa-search-plus"></i>
                         </a>
                     </div>
@@ -1754,7 +1754,7 @@
                 <div class="gallery-item" data-category="lashes">
                     <img src="images/juan-manuel-merino-ZE8Tb4qkiVM-unsplash.jpg" alt="Lash Extensions" class="gallery-img">
                     <div class="gallery-overlay">
-                        <a href="/api/placeholder/800/800" class="gallery-icon">
+                        <a href="images/juan-manuel-merino-ZE8Tb4qkiVM-unsplash.jpg" class="gallery-icon">
                             <i class="fas fa-search-plus"></i>
                         </a>
                     </div>
@@ -1762,7 +1762,7 @@
                 <div class="gallery-item" data-category="braids">
                     <img src="images/jessica-felicio-_cvwXhGqG-o-unsplash.jpg" alt="Box Braids" class="gallery-img">
                     <div class="gallery-overlay">
-                        <a href="/api/placeholder/800/800" class="gallery-icon">
+                        <a href="images/jessica-felicio-_cvwXhGqG-o-unsplash.jpg" class="gallery-icon">
                             <i class="fas fa-search-plus"></i>
                         </a>
                     </div>
@@ -1770,7 +1770,7 @@
                 <div class="gallery-item" data-category="lashes">
                     <img src="images/IMG_1808.jpg" alt="Lash Extensions" class="gallery-img">
                     <div class="gallery-overlay">
-                        <a href="/api/placeholder/800/800" class="gallery-icon">
+                        <a href="images/IMG_1808.jpg" class="gallery-icon">
                             <i class="fas fa-search-plus"></i>
                         </a>
                     </div>
