Updated index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
                         </div>
                     </div>
                     <div class="social-links">
-                        <a href="https://instagram.com/_r.s_beautys" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/_.r.s_beauty?igsh=MWdpdHB1dnM0bnZ3MQ== " target="_blank"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-tiktok"></i></a>
                         <a href="#"><i class="fab fa-pinterest"></i></a>
