--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <i class="fas fa-star-half-alt"></i>
                         </div>
                         <div class="product-actions">
-                            <a href="#" class="btn">Add to Cart</a>
+                            <a href="#" class="btn">Reserve Product</a>
                             <a href="#" class="btn outline product-details-btn" data-product="hair-oil">Details</a>
                         </div>
                     </div>
@@ -222,7 +222,7 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <div class="product-actions">
-                            <a href="#" class="btn">Add to Cart</a>
+                            <a href="#" class="btn">Reserve Product</a>
                             <a href="#" class="btn outline product-details-btn" data-product="edge-control">Details</a>
                         </div>
                     </div>
@@ -244,7 +244,7 @@
                             <i class="far fa-star"></i>
                         </div>
                         <div class="product-actions">
-                            <a href="#" class="btn">Add to Cart</a>
+                            <a href="#" class="btn">Reserve Product</a>
                             <a href="#" class="btn outline product-details-btn" data-product="lash-cleanser">Details</a>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                             <i class="fas fa-star-half-alt"></i>
                         </div>
                         <div class="product-actions">
-                            <a href="#" class="btn">Add to Cart</a>
+                            <a href="#" class="btn">Reserve Product</a>
                             <a href="#" class="btn outline product-details-btn" data-product="satin-bonnet">Details</a>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
                         </ul>
                     </div>
                     <div class="product-modal-actions">
-                        <button class="btn">Add to Cart</button>
+                        <button class="btn">Reserve Product</button>
                     </div>
                 </div>
             </div>
